Some cleanup and add test cases for administration functionality.